data/derived/sp14/progs/unify/prog2345.ml.out
Characters 34-35:
  in g 2;;
     ^
Error: This expression has type int
       This is not a function; it cannot be applied.
